recursion.logo.lessons.recursion.logo.koch.SquareKoch.scala.error
SquareKoch:16: error: not found: value legnth
    avance(legnth);
           ^